[package]
authors = ["PureStake"]
edition = "2021"
name = "pallet-crowdloan-rewards"
version = '0.6.0'
description = "Reward citizens who participated in a crowdloan to acquire a parachain slot o nthe backing relay chain."

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false}
serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.43" }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend", "alloc"], optional = true }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.43" }

[features]
default = ["std"]
std = [
    "pallet-balances/std",
    "parity-scale-codec/std",
    "pallet-utility/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "serde",
    "log/std",
    "sp-std/std",
    "sp-io/std",
    "scale-info/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "sp-trie",
    "ed25519-dalek",
    "sp-runtime/runtime-benchmarks"
]
