[package]
authors = ["PureStake"]
edition = "2021"
name = "pallet-crowdloan-rewards"
version = '0.6.0'
description = "Reward citizens who participated in a crowdloan to acquire a parachain slot o nthe backing relay chain."

[dependencies]
ed25519-dalek = { version = "2.1", default-features = false, optional = true }
log = { version = "0.4.20", default-features = false }
parity-scale-codec = { version = "3.6.5", default-features = false}
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.188", optional = true, features = ["derive"], default-features = false }

frame-benchmarking = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", default-features = false, optional = true , branch = "moonbeam-polkadot-v1.7.2" }
frame-support = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", default-features = false, branch = "moonbeam-polkadot-v1.7.2" }
frame-system = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", default-features = false, branch = "moonbeam-polkadot-v1.7.2" }
pallet-balances = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", default-features = false, branch = "moonbeam-polkadot-v1.7.2" }
pallet-utility = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", default-features = false, branch = "moonbeam-polkadot-v1.7.2" }
sp-core = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", default-features = false, branch = "moonbeam-polkadot-v1.7.2" }
sp-io = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", default-features = false, branch = "moonbeam-polkadot-v1.7.2" }
sp-runtime = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", default-features = false, branch = "moonbeam-polkadot-v1.7.2" }
sp-std = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", default-features = false, branch = "moonbeam-polkadot-v1.7.2" }
sp-trie = { git = "https://github.com/moonbeam-foundation/polkadot-sdk", default-features = false, optional = true , branch = "moonbeam-polkadot-v1.7.2" }

[features]
default = ["std"]
std = [
    "pallet-balances/std",
    "parity-scale-codec/std",
    "pallet-utility/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "serde",
    "log/std",
    "sp-std/std",
    "sp-io/std",
    "scale-info/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "sp-trie",
    "ed25519-dalek",
    "sp-runtime/runtime-benchmarks"
]
try-runtime = ["frame-support/try-runtime"]
